# Inquiro

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/config/: __init__.py  agents.yaml  settings.py
src/coordinator/: graph.py  router.py  state.py
src/interfaces/: cli.py  streamlit_app.py
src/planning/: agent.py  tools.py
src/processing/: agent.py  tools.py
src/retrieval/: agent.py  tools.py
src/shared/: contracts.py  llm.py  models.py  run_logger.py  utils.py
src/writing/: agent.py  tools.py
src/writing/templates/: report.md.j2
tests/: conftest.py  test_contracts.py  test_contracts_integration.py  test_contracts_unit.py  test_coordinator.py  test_llm.py  test_llm_unit.py  test_planning.py  test_planning_agent_unit.py  test_processing.py  test_processing_agent_unit.py  test_retrieval.py  test_state_contracts.py  test_utils.py  test_writing.py  test_writing_agent_unit.py
